updated the code coverage